# wsjcpp-logger

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  wsjcpp.yml
src/: main.cpp
src/wsjcpp-logger/: wsjcpp_logger.cpp  wsjcpp_logger.h
